--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,23 @@
 
 .header_sidebar {
   background-color: #fff;
-  width: 100%;
   display: none;
   position: relative;
   z-index: 55;
-  padding-left: 10px;
-  padding-right: 10px;
+  width: 100%;
+  
+}
+
+.header_sidebar .sidebar-button
+{
+  padding-left: 30px;
+  padding-right: 20px;
   flex-direction: row;
+  border: none;
+  outline: none;
+  justify-content: flex-start;
+  background: transparent;
+  color: #b61984;
 }
 
 .header_navbar {
@@ -397,12 +407,30 @@ select.select_courses:focus {
 
 @media only screen and (max-width: 1200px) {
   .header_navbar {
-    display: none !important;
+    display: none ;
   }
 
   .header_sidebar {
-    display: flex !important;
+    display: flex ;
   }
+
+  
+}
+@media only screen and (max-width:2000px) and (min-width: 1201px)
+{
+  #main
+  { margin-left: 0% !important; } 
+  #mySidebar
+  { display: none !important} 
+  #openNav
+  { display: inline-block !important} 
+  #closeNav
+  { display: none !important} 
+}
+#icon_h
+{
+  width: 48px;
+  display: inline-block;
 }
 
 /*# sourceMappingURL=main.css.map */
