--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,134 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.wrap_1,
-.wrap_3 {
-  background-color: #fff;
-  position: relative;
-}
-
-.header_sidebar {
-  background-color: #fff;
-  display: none;
-  position: relative;
-  z-index: 55;
+.section_img, .wrap_1 .section_1 img, .wrap_1 .section_2 img, .wrap_2 .service_content .section_3 img, .wrap_3 .section_4 img {
+  height: auto;
+  display: block;
+  user-select: none;
   width: 100%;
-  
 }
 
-.header_sidebar .sidebar-button
-{
-  padding-left: 30px;
-  padding-right: 20px;
-  flex-direction: row;
-  border: none;
-  outline: none;
-  justify-content: flex-start;
-  background: transparent;
-  color: #b61984;
+.section, .wrap_1 .section_2, .wrap_2 .service_content .section_3, .wrap_3 .section_4 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 51;
+  width: 100%;
 }
 
-.header_navbar {
+.btn_header,
+.btn_form {
   background-color: transparent;
-  color: #181818;
+  color: white;
+  font-size: 0.9rem;
+  display: inline-block;
+  line-height: 1;
+  border: solid 1px #b61984;
+  box-shadow: 0 0 0 3em #b61984 inset;
+  transition: all 300ms ease;
+  padding: 1em 1em;
+  margin: 5px;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 50px;
   width: 100%;
-  height: 80px;
-  position: relative;
-  z-index: 55;
 }
 
-.navbar {
-  padding: 0rem 0rem !important;
+.btn_header:focus,
+.btn_form:focus {
+  outline: none;
 }
 
-.navbar-expand-lg {
-  justify-content: space-between !important;
+.btn_header:hover,
+.btn_form:hover {
+  color: #b61984;
+  box-shadow: 0 0 0 0 #b61984 inset;
 }
 
-.nav-link {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
+@media only screen and (max-width: 1200px) {
+  .header_navbar {
+    transform: translateX(-320px);
+    transition: none;
+    text-align: center;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    width: 320px;
+    clear: both;
+    z-index: 101;
+    padding: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: block;
+    visibility: initial;
+    opacity: 1;
+  }
+  .header_navbar .navbar-direction {
+    flex-direction: row;
+  }
+  .header_navbar .nav-item-button {
+    margin-left: 0;
+    margin-right: 1em;
+    justify-content: center;
+  }
+  .header_navbar .navbar-nav {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .header_navbar .nav-item {
+    flex-direction: column;
+  }
+  .header_navbar .nav-item {
+    padding: 0;
+  }
+  .header_navbar .nav-item.active {
+    display: none;
+  }
+  .header_navbar .Crest img {
+    width: 90px;
+  }
+}
+
+@media only screen and (max-width: 3760px) and (min-width: 1201px) {
+  .header_navbar {
+    transform: translateX(0px);
+    background-color: transparent;
+    /* color: #181818; */
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    z-index: 55;
+    top: 0;
+    bottom: 0;
+    display: block;
+    box-shadow: none;
+    transition: none;
+  }
+  .header_navbar .navbar-direction {
+    flex-direction: column;
+  }
+  .header_navbar .nav-item-button {
+    margin-left: 35px;
+    margin-right: 0.5em;
+    justify-content: center;
+  }
+  .header_navbar .navbar-nav {
+    display: flex;
+    flex-direction: row !important;
+  }
+  .header_navbar .nav-item {
+    flex-direction: row;
+  }
+  .header_navbar .nav-item {
+    padding: 0 45px 0 0;
+  }
+  .header_navbar .nav-item.active {
+    display: block;
+  }
+  .header_navbar .Crest img {
+    width: 80px;
+  }
 }
 
 .gutter .port {
@@ -78,20 +156,11 @@
 .nav-item-icon {
   margin-left: 1em;
   margin-right: 0;
+  font-size: 1.25em;
 }
 
-.nav-item-button {
-  margin-left: 0;
-  margin-right: 1em;
-}
-
-/* .Navbar {
-  flex-grow: 0 !important;
-  font-size: 13px;
-} */
-
-.nav-item {
-  padding: 0 30px 0 0;
+.navbar {
+  padding: 0 !important;
 }
 
 .nav-item {
@@ -134,114 +203,62 @@
   background-color: #b61984;
 }
 
-.Crest img {
-  width: 80px;
-}
-
-.btn_header,
-.btn_form {
-  background-color: transparent;
-  color: white;
-  font-size: 0.9rem;
+#icon_h {
+  width: 48px;
   display: inline-block;
-  line-height: 1;
-  border: solid 1px #b61984;
-  box-shadow: 0 0 0 3em #b61984 inset;
-  transition: all 300ms ease;
-  padding: 1em 1em;
-  margin: 5px;
-  text-decoration: none;
-  font-weight: 500;
-  text-align: center;
-  border-radius: 50px;
-  width: 100%;
 }
 
-.btn_header:focus,
-.btn_form:focus {
-  outline: none;
-}
-
-
-.btn_header:hover,
-.btn_form:hover {
-  color: #b61984;
-  box-shadow: 0 0 0 0 #b61984 inset;
-}
-
-.section_1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 50;
-}
-
-.section_1 img,
-.section_2 img,
-.section_3 img {
-  width: 100%;
-  height: auto;
-  display: block;
-  user-select: none;
-}
-
-.section_2 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 51;
-}
-
-.section_3,
-.section_4 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-}
-
-.Content_1 {
+.navbar-nav-fix {
   display: flex;
-  padding: 5em;
+  flex-direction: row;
+  margin: auto;
 }
 
-.wrap_2 {
-  background-color: #dcd1f3;
-  position: relative;
+.Crest {
+  margin: 0 auto;
 }
 
-.wrap_2 p {
-  margin-bottom: 0.3rem;
-}
-
-.bg_item {
+.header_sidebar {
   background-color: #fff;
-  border-radius: 15px;
-  padding-bottom: 25px;
-}
-
-.bg_item:hover {
-  box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
-}
-
-.item_thumb {
-  padding-top: 0.5rem;
-}
-
-.service_content {
+  display: none;
   position: relative;
-}
-
-.Content_2 {
   z-index: 55;
-  position: relative;
+  width: 100%;
+  transform: translateX(0px);
+}
+
+.header_sidebar .sidebar-button {
+  padding-left: 30px;
+  padding-right: 20px;
+  flex-direction: row;
+  border: none;
+  outline: none;
+  justify-content: flex-start;
+  background: transparent;
+  color: #b61984;
+}
+
+@media only screen and (max-width: 3760px) and (min-width: 1201px) {
+  .header_sidebar {
+    display: none;
+  }
+  #openNav {
+    display: inline-block !important;
+  }
+  #closeNav {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .header_sidebar {
+    display: flex;
+  }
 }
 
 .form {
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
+  background-color: #fff;
+  box-shadow: 0 30px 30px -10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -267,22 +284,13 @@
   position: relative;
 }
 
-.Form_style_1 .icon {
-  position: absolute;
-  top: 1em;
-  left: 1em;
-  line-height: 1;
-  z-index: 3;
-}
-
 .Form_style_1 .wrap_input {
   position: relative;
 }
 
-
 .Form_style_1 .wrap_input .input1 {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50px;
   padding: 1em 1em 1em 3.5em !important;
   font-size: .8em !important;
@@ -291,6 +299,13 @@
   outline-width: 1px;
 }
 
+.Form_style_1 .icon {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  line-height: 1;
+  z-index: 3;
+}
 
 .Form_style_2 {
   flex-grow: 1;
@@ -307,7 +322,7 @@
 
 .Form_style_2 .wrap_textarea .input2 {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   padding: 1em 1em 1em 3.5em !important;
   font-size: .8em !important;
@@ -332,105 +347,161 @@
   width: 50%;
 }
 
-
-
 .select_courses {
   width: 100%;
   height: 2.5em;
   border-radius: 50px;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none;
   padding-left: 40px;
 }
 
 .select_courses:focus {
-  border: 2px solid rgba(0, 0, 0, .3);
+  border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 select {
-
   /* styling */
   background-color: white;
-  /* border: thin solid blue;
-  border-radius: 4px; */
   display: inline-block;
   font: inherit;
   line-height: 1.5em;
   padding: 0.5em 3.5em 0.5em 1em;
-
   /* reset */
-
   margin: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
 
-
 /* arrows */
-
 select.select_courses {
-  background-image:
-    linear-gradient(45deg, transparent 50%, #b61984 50%),
-    linear-gradient(135deg, #b61984 50%, transparent 50%),
-    linear-gradient(to right, white, white);
-  background-position:
-    calc(100% - 20px) calc(1em + 2px),
-    calc(100% - 15px) calc(1em + 2px),
-    100% 0;
-  background-size:
-    5px 5px,
-    5px 5px,
-    2.5em 2.5em;
+  background-image: linear-gradient(45deg, transparent 50%, #b61984 50%), linear-gradient(135deg, #b61984 50%, transparent 50%), linear-gradient(to right, white, white);
+  background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), 100% 0;
+  background-size: 5px 5px,
+ 5px 5px,
+ 2.5em 2.5em;
   background-repeat: no-repeat;
 }
 
 select.select_courses:focus {
-  background-image:
-    linear-gradient(45deg, #b61984 50%, transparent 50%),
-    linear-gradient(135deg, transparent 50%, #b61984 50%),
-    linear-gradient(to right, white, white);
-  background-position:
-    calc(100% - 15px) 1em,
-    calc(100% - 20px) 1em,
-    100% 0;
-  background-size:
-    5px 5px,
-    5px 5px,
-    2.5em 2.5em;
+  background-image: linear-gradient(45deg, #b61984 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #b61984 50%), linear-gradient(to right, white, white);
+  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
+  background-size: 5px 5px,
+ 5px 5px,
+ 2.5em 2.5em;
   background-repeat: no-repeat;
   /* border-color: grey; */
   outline: 0;
 }
 
-@media only screen and (max-width: 1200px) {
-  .header_navbar {
-    display: none ;
-  }
-
-  .header_sidebar {
-    display: flex ;
-  }
-
-  
-}
-@media only screen and (max-width:2000px) and (min-width: 1201px)
-{
-  #main
-  { margin-left: 0% !important; } 
-  #mySidebar
-  { display: none !important} 
-  #openNav
-  { display: inline-block !important} 
-  #closeNav
-  { display: none !important} 
-}
-#icon_h
-{
-  width: 48px;
-  display: inline-block;
+.stop-scrolling {
+  overflow: hidden;
+  width: 100%;
 }
 
+#main {
+  margin-left: 0% !important;
+}
+
+.wrap_1 {
+  background-color: #fff;
+  position: relative;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+.wrap_1 .section_1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 50;
+  width: 100%;
+}
+
+.wrap_1 .Content_1 {
+  display: flex;
+  padding: 5em;
+}
+
+.wrap_1 .Content_1 p {
+  font-size: 1.1rem;
+  margin-bottom: .5em;
+  color: #b61984;
+}
+
+.wrap_1 .Content_1 h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-align: left;
+}
+
+.wrap_1 .Content_1 img {
+  width: 100%;
+}
+
+.wrap_2 {
+  background-color: #dcd1f3;
+  position: relative;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+.wrap_2 .service_content {
+  position: relative;
+}
+
+.wrap_2 .service_content .container {
+  z-index: 55;
+  position: relative;
+}
+
+.wrap_2 .service_content .container .bg_item {
+  background-color: #fff;
+  border-radius: 15px;
+  padding-bottom: 25px;
+}
+
+.wrap_2 .service_content .container .bg_item:hover {
+  box-shadow: 0 30px 30px -10px rgba(0, 0, 0, 0.2);
+}
+
+.wrap_2 .service_content .container .bg_item .item_thumb {
+  padding-top: 0.5rem;
+}
+
+.wrap_2 .service_content .container .bg_item .item_thumb p:first-child {
+  font-size: .75rem;
+  margin-bottom: 0.5em;
+  color: #b61984;
+}
+
+.wrap_2 .service_content .container .bg_item .item_thumb h2 {
+  font-size: 1.55rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.wrap_2 .service_content .container .bg_item .item_thumb p:last-child {
+  font-weight: 400;
+}
+
+.wrap_3 {
+  background-color: #fff;
+  position: relative;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+.wrap_3 .Content_2 {
+  z-index: 55;
+  position: relative;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 /*# sourceMappingURL=main.css.map */
