--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@
     position: fixed;
     width: 320px;
     clear: both;
-    z-index: 101;
+    z-index: 70;
     padding: 0;
     overflow-y: auto;
     overflow-x: hidden;
@@ -98,7 +98,7 @@
     width: 100%;
     height: 80px;
     position: fixed;
-    z-index: 55;
+    z-index: 70;
     top: 0;
     bottom: 0;
     display: block;
@@ -378,18 +378,14 @@ select {
 select.select_courses {
   background-image: linear-gradient(45deg, transparent 50%, #b61984 50%), linear-gradient(135deg, #b61984 50%, transparent 50%), linear-gradient(to right, white, white);
   background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), 100% 0;
-  background-size: 5px 5px,
- 5px 5px,
- 2.5em 2.5em;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
 }
 
 select.select_courses:focus {
   background-image: linear-gradient(45deg, #b61984 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #b61984 50%), linear-gradient(to right, white, white);
   background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
-  background-size: 5px 5px,
- 5px 5px,
- 2.5em 2.5em;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
   background-repeat: no-repeat;
   /* border-color: grey; */
   outline: 0;
