--- a/SASS/component/_header_sidebar.scss
+++ b/SASS/component/_header_sidebar.scss
@@ -1,8 +1,9 @@
 .header_sidebar {
     background-color: #fff;
     display: none;
-    position: relative;
-    z-index: 55;
+    position: fixed;
+    top:0;
+    z-index: 70;
     width: 100%;
     transform: translateX(0px);
 
@@ -33,4 +34,5 @@
     .header_sidebar {
         display: flex;
       }
+      
   }
