--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -7,6 +7,8 @@
 @import "./component/header_sidebar";
 @import "./component/form";
 @import "./layout/body";
+@import "./layout/foot";
+
 ////////////////////////////header//////
 * {
   padding: 0;
