--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,84 @@ select.select_courses:focus {
   position: relative;
 }
 
+footer {
+  background-image: url("../../images/footer_background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+footer .footer_content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding-bottom: 12em;
+  padding-top: 8em;
+}
+
+h5 {
+  font-size: 1.55rem;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.max_legt {
+  position: relative;
+  width: 1200px;
+  max-width: calc(100% - 60px);
+}
+
+.footer_item1,
+.footer_item2,
+.footer_item3,
+.footer_item4 {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.footer_item1 .footer_text {
+  font-size: 0.9em;
+  margin-top: 0.8em;
+}
+
+.footer_item1 .footer_text .footer_ul {
+  padding-top: 10px;
+  list-style: none;
+}
+
+.footer_item1 .footer_text .footer_ul .footer_icon:hover i {
+  color: black;
+}
+
+.footer_item1 .footer_text .footer_ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer_item1 .footer_text .footer_ul li a {
+  text-decoration: none;
+}
+
+.footer_item2 .footer_ul {
+  list-style: none;
+}
+
+.footer_item2 .footer_ul .footer_icon:hover a {
+  color: black;
+}
+
+.footer_item2 .footer_ul li {
+  display: block;
+  margin-right: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.5em 0;
+}
+
+.footer_item2 .footer_ul li a {
+  text-decoration: none;
+  font-size: 0.9em;
+}
+
 * {
   padding: 0;
   margin: 0;
