--- a/Javascript_axios_QLTT/app/views/index.html
+++ b/Javascript_axios_QLTT/app/views/index.html
@@ -181,6 +181,7 @@
                   class="form-control"
                   placeholder="Nhập vào tài khoản"
                 />
+                <span  id="tbTK" style="display: block;color: red; margin-left: 2px;"></span>
               </div>
               <div class="form-group">
                 <label>Họ tên</label>
@@ -189,6 +190,8 @@
                   class="form-control"
                   placeholder="Nhập vào họ tên"
                 />
+                <span  id="tbHT" style="display: block;color: red; margin-left: 2px;"></span>
+
               </div>
               <div class="form-group">
                 <label>Mật khẩu</label>
@@ -198,6 +201,8 @@
                   placeholder="Nhập vào mật khẩu"
                   type="password"
                 />
+                <span  id="tbMK" style="display: block;color: red; margin-left: 2px;"></span>
+
               </div>
               <div class="form-group">
                 <label>Email</label>
@@ -206,6 +211,8 @@
                   class="form-control"
                   placeholder="Nhập vào Email"
                 />
+                <span  id="tbEmail" style="display: block;color: red; margin-left: 2px;"></span>
+
               </div>  
               <div class="form-group">
                 <label>Hình Ảnh</label>
@@ -214,19 +221,21 @@
                   class="form-control"
                   placeholder="Nhập vào hình ảnh"
                 />
+                <span  id="tbHA" style="display: block;color: red; margin-left: 2px;"></span>
               </div>             
               <div class="form-group">
                 <label for="">Loại Người Dùng: </label>
-                <select class="form-control" id="loaiNguoiDung">
-                  <option>Chọn loại người dùng</option>
+                <select class="form-control md-selected" id="loaiNguoiDung">
+                  <option value= "" selected >Chọn loại người dùng</option>
                   <option value="GV">Giáo viên</option>
                   <option value="HV">Học viên</option>
                 </select>
+                <span  id="tbLND" style="display: block;color: red; margin-left: 2px;"></span>
               </div>
               <div class="form-group">
                 <label for="">Loại Ngôn Ngữ: </label>
                 <select class="form-control" id="loaiNgonNgu">
-                  <option>Chọn ngôn ngữ</option>
+                  <option value= "" selected>Chọn ngôn ngữ</option>
                   <option>ITALIAN</option>
                   <option>FRENCH</option>
                   <option>JAPANESE</option>
@@ -235,11 +244,12 @@
                   <option>SWEDEN</option>
                   <option>SPANISH</option>
                 </select>
+                <span  id="tbLNN" style="display: block;color: red; margin-left: 2px;"></span>
               </div>
               <div class="form-group">
                 <label>Mô tả</label>
                 <textarea name="" id="MoTa" class="form-control" placeholder="Nhập vào mô tả"></textarea>
-               
+                <span  id="tbMT" style="display: block;color: red; margin-left: 2px;"></span>
               </div>
             </div>
             <!-- Modal footer -->
@@ -278,12 +288,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
     integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./../models/product.js"></script>
+    
+    <script src="./../controllers/validation.js"></script>
 
+    <script src="./../models/product.js"></script>
 
     <script src="./../services/index.js"></script>
 
     <script src="./../controllers/main.js"></script>
+
     
   </body>
 </html>
